--- a/SalesWebMvc/appsettings.json
+++ b/SalesWebMvc/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SalesWebMvcContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebMvcContext-ef1fa867-64d7-4a62-85c1-318f483374e7;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SalesWebMvcContext": "server=192.168.0.15;userid=root;password=masterkey;database=saleswebmvcappdb"
   }
 }
